peer assign 1 submission - 13 june

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -181,7 +181,9 @@ hljs.initHighlightingOnLoad();
 <body>
 <h1>Reproducible Research: Peer Assessment 1</h1>
 
-<h2>Introduction</h2>
+<p><em>submitted: June 2014</em></p>
+
+<h2>Data</h2>
 
 <p>The assignment makes use of data collected from a personnal activity monitoring device which collects data at 5-minute interval throughout the day and records the number of steps taken in each interval. The data provided is from an anonymous individual and covers a 2 month period from October 2012 to November 2012.</p>
 
